# otelc

./: .gitignore  Cargo.toml  LICENSE  README.md  otelc.example.yaml
crates/otelc-opamp/: Cargo.toml  build.rs
crates/otelc-opamp/src/: capabilities.rs  error.rs  event.rs  framing.rs  instance_uid.rs  lib.rs  message.rs
crates/otelc-opamp/src/server/: mod.rs  registry.rs  ws.rs
crates/otelc-opamp/tests/: server_roundtrip.rs
crates/otelc-otlp/: Cargo.toml
crates/otelc-otlp/src/: lib.rs  model.rs  receiver.rs  store.rs
crates/otelc-tui/: Cargo.toml
crates/otelc-tui/src/: app.rs  cli.rs  config.rs  main.rs  pipeline.rs  theme.rs  ui.rs  views.rs
crates/otelc-tui/src/control/: embedded.rs  external.rs  mod.rs
docs/design/: README.md  dld.md  hld.md  mockups.md
examples/mock-agent/: Cargo.toml
examples/mock-agent/src/: main.rs
proto/: README.md
