[package]
name = "otelc-opamp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
prost-build = "0.14"
