[package]
name = "otelc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Norton Commander-style TUI for managing OpenTelemetry Collectors via OpAMP"

[[bin]]
name = "otelc"
path = "src/main.rs"

[dependencies]
otelc-opamp = { workspace = true }
otelc-otlp = { workspace = true }
tokio = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
